--- a/components/Features/ClientList/ClientInfoSummary/ClientInfoSummary.module.scss
+++ b/components/Features/ClientList/ClientInfoSummary/ClientInfoSummary.module.scss
@@ -7,4 +7,13 @@
 		display: flex;
 		flex-direction: column;
 	}
+
+	.avatar {
+		position: relative;
+		height: 50px;
+		width: 50px;
+		border-radius: 50%;
+		border: 2px solid black;
+		overflow: hidden;
+	}
 }
