--- a/styles/pages/ClientProfile.module.scss
+++ b/styles/pages/ClientProfile.module.scss
@@ -1,4 +1,8 @@
 .container {
+	height: 100vh;
+	display: flex;
+	flex-direction: column;
+
 	.subMenu {
 		height: 120px;
 		padding: 20px;
@@ -7,9 +11,20 @@
 		background-color: green;
 	}
 
-	img {
-		object-fit: cover;
-		height: 100%;
+	.avatar {
+		position: relative;
 		width: 100%;
+		height: 200px;
+	}
+
+	.contactInfo {
+		padding: 20px;
+		display: flex;
+		flex-direction: column;
+
+		.contactRow {
+			padding: 10px 0;
+			display: flex;
+		}
 	}
 }
