--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -1,7 +1,9 @@
 // Colors
-$primary: #23fa;
-$accent: #85b;
-$text: #000;
+$primary: #cd000d;
+$primary-dark: #a30a14;
+$accent: #556c79;
+$text: #373a3c;
+$white: #fff;
 
 // Screen sizes
 $xs: 600px;
