--- a/components/Features/ClientList/ClientListItem/ClientListItem.module.scss
+++ b/components/Features/ClientList/ClientListItem/ClientListItem.module.scss
@@ -1,8 +1,9 @@
+@import '../../../../styles/_variables.scss';
+
 .container {
 	padding: 20px 30px;
-	background-color: green;
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
-	border-bottom: 1px solid black;
+	border-bottom: 1px solid $text;
 }
