--- a/components/UI/TopNav/TopNav.module.scss
+++ b/components/UI/TopNav/TopNav.module.scss
@@ -3,17 +3,22 @@
 .container {
 	height: 80px;
 	padding: 20px;
-	background-color: $primary;
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
-	border-bottom: 2px solid black;
+	border-bottom: 2px solid $text;
 
-	// TODO: Center logo/middle item
+	.leftSide {
+		flex-grow: 1;
+		flex-basis: 0;
+	}
 
 	.rightSide {
 		display: flex;
 		align-items: center;
+		justify-content: flex-end;
+		flex-grow: 1;
+		flex-basis: 0;
 
 		// TODO: Remove margin first-of-child
 		* > :not(:first-of-type) {
@@ -24,7 +29,7 @@
 			height: 30px;
 			width: 30px;
 			border-radius: 50%;
-			border: 2px solid black;
+			border: 2px solid $primary;
 			font-size: 20px;
 			display: flex;
 			justify-content: center;
