--- a/styles/pages/ClientList.module.scss
+++ b/styles/pages/ClientList.module.scss
@@ -10,8 +10,9 @@
 		display: flex;
 		justify-content: center;
 		align-items: center;
-		border-bottom: 2px solid black;
+		border-bottom: 2px solid $text;
 		background-color: $primary;
+		color: $white;
 	}
 
 	.optionsBar {
@@ -20,17 +21,19 @@
 		display: flex;
 		justify-content: space-between;
 		align-items: center;
-		border-bottom: 2px solid black;
+		border-bottom: 2px solid $text;
 
 		.filter {
 			display: flex;
 
+			> p {
+				margin-right: 6px;
+			}
 			// TODO: Add margin-right on all items but last
 		}
 	}
 
 	.list {
-		background-color: red;
 		height: 100%;
 		overflow-y: scroll;
 	}
