--- a/components/Features/ClientList/ClientInfoSummary/ClientInfoSummary.module.scss
+++ b/components/Features/ClientList/ClientInfoSummary/ClientInfoSummary.module.scss
@@ -14,6 +14,7 @@
 		position: relative;
 		height: 50px;
 		width: 50px;
+		flex-shrink: 0;
 		border-radius: 50%;
 		border: 2px solid $primary;
 		overflow: hidden;
