--- a/components/Features/ClientList/ClientListItem/ClientListItem.module.scss
+++ b/components/Features/ClientList/ClientListItem/ClientListItem.module.scss
@@ -1,7 +1,7 @@
 @import '../../../../styles/_variables.scss';
 
 .container {
-	padding: 18px 12px;
+	padding: 1.125rem 0.75rem;
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
