--- a/components/Features/ClientList/ClientInfoSummary/ClientInfoSummary.module.scss
+++ b/components/Features/ClientList/ClientInfoSummary/ClientInfoSummary.module.scss
@@ -5,15 +5,15 @@
 	align-items: center;
 
 	.info {
-		margin-left: 16px;
+		margin-left: 1rem;
 		display: flex;
 		flex-direction: column;
 	}
 
 	.avatar {
 		position: relative;
-		height: 50px;
-		width: 50px;
+		height: 3.125rem;
+		width: 3.125rem;
 		flex-shrink: 0;
 		border-radius: 50%;
 		border: 2px solid $primary;
