--- a/components/UI/Loader/Loader.module.scss
+++ b/components/UI/Loader/Loader.module.scss
@@ -1,2 +1,27 @@
+@import '../../../styles/_variables.scss';
+
 .container {
+	width: 100%;
+	height: 100%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+
+	.loader {
+		border: 1rem solid $lightgrey;
+		border-top: 1rem solid $primary;
+		border-radius: 50%;
+		width: 7.5rem;
+		height: 7.5rem;
+		animation: spin 2s linear infinite;
+	}
+
+	@keyframes spin {
+		0% {
+			transform: rotate(0deg);
+		}
+		100% {
+			transform: rotate(360deg);
+		}
+	}
 }
