--- a/styles/pages/ClientList.module.scss
+++ b/styles/pages/ClientList.module.scss
@@ -5,8 +5,8 @@
 	display: flex;
 	flex-direction: column;
 	.banner {
-		height: 80px;
-		padding: 20px;
+		height: 5rem;
+		padding: 1.25rem;
 		display: flex;
 		justify-content: center;
 		align-items: center;
@@ -16,8 +16,8 @@
 	}
 
 	.optionsBar {
-		height: 40px;
-		padding: 20px;
+		height: 2.5rem;
+		padding: 1.25rem;
 		display: flex;
 		justify-content: space-between;
 		align-items: center;
@@ -27,9 +27,8 @@
 			display: flex;
 
 			> p {
-				margin-right: 6px;
+				margin-right: 0.5rem;
 			}
-			// TODO: Add margin-right on all items but last
 		}
 	}
 
