--- a/styles/pages/ClientProfile.module.scss
+++ b/styles/pages/ClientProfile.module.scss
@@ -6,8 +6,8 @@
 	flex-direction: column;
 
 	.subMenu {
-		height: 120px;
-		padding: 20px;
+		height: 7.5rem;
+		padding: 1.25rem;
 		display: flex;
 		align-items: center;
 	}
@@ -15,16 +15,16 @@
 	.avatar {
 		position: relative;
 		width: 100%;
-		height: 200px;
+		height: 12.5rem;
 	}
 
 	.contactInfo {
-		padding: 20px;
+		padding: 1.25rem;
 		display: flex;
 		flex-direction: column;
 
 		.contactRow {
-			padding: 10px 0;
+			padding: 0.75rem 0;
 			display: flex;
 		}
 	}
