--- a/components/UI/TopNav/TopNav.module.scss
+++ b/components/UI/TopNav/TopNav.module.scss
@@ -30,6 +30,13 @@
 			display: flex;
 			justify-content: center;
 			align-items: center;
+			cursor: pointer;
+			line-height: 0;
+
+			&:hover {
+				color: $white;
+				background-color: $primary;
+			}
 		}
 	}
 }
