--- a/components/Features/SiteList/SiteFilter/SiteFilter.module.scss
+++ b/components/Features/SiteList/SiteFilter/SiteFilter.module.scss
@@ -1,4 +1,14 @@
 @import '../../../../styles/_variables.scss';
 
 .container {
+	padding-bottom: 2px;
+	border: none;
+	border-bottom: 2px solid $text;
+	font-size: 1rem;
+
+	@media #{$desktop} {
+		&:hover {
+			border-color: $primary;
+		}
+	}
 }
