--- a/styles/pages/SiteList.module.scss
+++ b/styles/pages/SiteList.module.scss
@@ -24,10 +24,15 @@
 		border-bottom: 2px solid $text;
 
 		.filter {
-			display: flex;
+			padding-bottom: 2px;
+			border: none;
+			border-bottom: 2px solid $text;
+			font-size: 1rem;
 
-			> p {
-				margin-right: 0.5rem;
+			@media #{$desktop} {
+				&:hover {
+					border-color: $primary;
+				}
 			}
 		}
 	}
