--- a/styles/pages/SiteList.module.scss
+++ b/styles/pages/SiteList.module.scss
@@ -28,6 +28,7 @@
 			border: none;
 			border-bottom: 2px solid $text;
 			font-size: 1rem;
+			background: $white;
 
 			@media #{$desktop} {
 				&:hover {
