--- a/components/Features/SiteList/SiteListPagination/SiteListPagination.module.scss
+++ b/components/Features/SiteList/SiteListPagination/SiteListPagination.module.scss
@@ -32,5 +32,13 @@
 		margin: 0 0.25rem;
 		border-bottom: 2px solid $primary;
 		font-weight: 700;
+		width: 30px;
+		text-align: center;
+	}
+
+	@media screen and (max-width: $xs) {
+		button {
+			padding: 0.625rem 0.475rem;
+		}
 	}
 }
